; ModuleID = '/home/carl/AnghaBench/torch7/extr_utils.c_torch_lua_toc.c'
source_filename = "/home/carl/AnghaBench/torch7/extr_utils.c_torch_lua_toc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @torch_lua_toc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @torch_lua_toc(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca double, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = call double (...) @real_time()
  store double %5, double* %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @luaL_checknumber(i32* %6, i32 1)
  store i64 %7, i64* %4, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = load double, double* %3, align 8
  %10 = load i64, i64* %4, align 8
  %11 = sitofp i64 %10 to double
  %12 = fsub double %9, %11
  %13 = fptosi double %12 to i64
  %14 = call i32 @lua_pushnumber(i32* %8, i64 %13)
  ret i32 1
}

declare dso_local double @real_time(...) #1

declare dso_local i64 @luaL_checknumber(i32*, i32) #1

declare dso_local i32 @lua_pushnumber(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
